Update project configuration and dependencies: - Fix TypeScript config - Update React Native and Expo versions - Add Android native files - Configure React Viro AR - Update package dependencies

--- a/eas.json
+++ b/eas.json
@@ -1,16 +1,25 @@
 {
   "cli": {
-    "version": ">= 3.13.3"
+    "version": ">= 5.9.1",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "gradleCommand": ":app:assembleDebug",
+        "buildType": "apk"
+      }
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease",
+        "env": {
+          "ANDROID_NDK_HOME": "/opt/android-ndk"
+        }
       }
     },
     "production": {
