--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
     "@reactvision/react-viro": "2.42.0",
     "expo": "~52.0.0",
+    "expo-dev-client": "~2.4.12",
     "expo-status-bar": "~1.10.0",
+    "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
     "react-native": "0.76.0",
-    "expo-dev-client": "~2.4.12",
-    "expo-system-ui": "~2.4.0"
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.5.0",
+    "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
   "private": true
