--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@reactvision/react-viro": "2.42.0",
-    "expo": "~52.0.0",
-    "expo-dev-client": "~2.4.12",
-    "expo-status-bar": "~1.10.0",
-    "expo-system-ui": "~2.4.0",
-    "react": "18.2.0",
-    "react-native": "0.76.0",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1"
+    "expo": "~52.0.46",
+    "expo-dev-client": "~5.0.20",
+    "expo-module-scripts": "^4.1.7",
+    "expo-sharing": "~13.0.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-view-shot": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
