--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.10",
-    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@reactvision/react-viro": "2.42.0",
-    "expo": "~52.0.46",
-    "expo-dev-client": "~5.0.20",
+    "expo": "48.0.18",
+    "expo-dev-client": "~2.0.0",
     "expo-module-scripts": "^4.1.7",
-    "expo-sharing": "~13.0.1",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-view-shot": "^4.0.3"
+    "expo-sharing": "~11.0.1",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.3.0",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-view-shot": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.5.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.0.27",
     "typescript": "^5.1.3"
   },
   "private": true
