Major update: Complete AR house visualizer app with comprehensive features
- Updated README with detailed app description and features
- Added comprehensive AR visualization with React Viro
- Implemented construction management with 8-phase guide system
- Added material customization for traditional Malaysian houses
- Included offline functionality and progress tracking
- Added photo documentation and sharing capabilities
- Implemented performance monitoring and optimization
- Added tutorial system for user onboarding
- Updated Android configuration for AR compatibility
- Added traditional Orang Asli and Malay house models
- Implemented gesture controls and measurement overlays
- Added cultural preservation features and educational content

Technical improvements:
- Updated dependencies to compatible versions
- Fixed TypeScript configuration
- Optimized build configuration
- Added proper error handling and user feedback
- Implemented comprehensive offline data management

The app now provides a complete AR-powered solution for traditional house construction visualization and management.

--- a/app.json
+++ b/app.json
@@ -8,6 +8,8 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "jsEngine": "hermes",
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.epichomesar",
