--- a/package.json
+++ b/package.json
@@ -9,17 +9,40 @@
     "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.20.17",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@reactvision/react-viro": "2.42.0",
-    "expo": "48.0.18",
+    "@reactvision/react-viro": "^2.43.0",
+    "eslint": "^9.30.1",
+    "eslint-config-expo": "^9.2.0",
+    "expo": "^53.0.17",
+    "expo-asset": "^11.1.7",
+    "expo-blur": "^14.1.5",
     "expo-dev-client": "~2.0.0",
+    "expo-file-system": "^18.1.11",
+    "expo-haptics": "^14.1.4",
+    "expo-image": "^2.3.2",
+    "expo-image-picker": "^16.1.4",
     "expo-module-scripts": "^4.1.7",
-    "expo-sharing": "~11.0.1",
-    "expo-status-bar": "~1.6.0",
+    "expo-modules-core": "^1.3.0",
+    "expo-navigation-bar": "^4.2.7",
+    "expo-router": "^5.1.3",
+    "expo-sharing": "^13.1.5",
+    "expo-splash-screen": "^0.30.10",
+    "expo-status-bar": "^2.2.3",
+    "expo-symbols": "^0.4.5",
     "expo-system-ui": "~2.3.0",
+    "expo-web-browser": "^14.2.0",
+    "metro": "0.82.4",
+    "metro-config": "0.82.4",
+    "metro-file-map": "0.82.4",
+    "metro-minify-terser": "0.82.4",
+    "metro-resolver": "0.82.4",
+    "metro-source-map": "0.82.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-view-shot": "^3.4.0"
@@ -29,6 +52,7 @@
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.5.0",
     "@types/react": "~18.0.27",
+    "@types/react-test-renderer": "^19.1.0",
     "typescript": "^5.1.3"
   },
   "private": true
